--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,12 @@ dependencies:
   flutter_dotenv: ^5.1.0
   provider: ^6.1.4
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/.env
